--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -55,9 +54,15 @@
 
   <div class="profile">
     <div class="profile-text">
-      <p>I am a Master's student in Energy at MINES Paris – PSL, specializing in renewable energy integration and energy efficiency. I also hold a Bachelor's degree in Energy Engineering from the Politehnica University of Bucharest, where I ranked in the top 10% of my class.</p>
-      <p>I have completed internships in commodities and energy trading, focusing on market analysis, forecasting, and risk assessment. My interests include financial and energy markets, data-driven decision making, and the energy transition.</p>
-      <p>I am currently involved in research on the impact of floating photovoltaic panels on water evaporation, combining my interests in renewable technologies and environmental sustainability.</p>
+      <p>I am a Master’s student in Energy at MINES Paris – PSL, specializing in renewable energy integration and energy efficiency. My work focuses on the intersection of energy systems, financial markets, and data science. I aim to contribute to the energy transition by leveraging advanced modeling techniques, quantitative analysis, and risk assessment to support smarter decision-making in both physical and financial energy markets.</p>
+
+      <p>Previously, I completed multiple internships at Tinmar Energy, Romania’s leading private energy group. I worked across both short- and long-term proprietary power and gas trading, focusing on forecasting, market fundamentals, and strategy development in the CSEE and German markets. I also analyzed the behavior of major market players and regulatory dynamics, gaining hands-on experience with derivatives and risk optimization.</p>
+
+      <p>My current research explores the impact of floating photovoltaic systems on evaporation reduction in reservoirs — combining renewable energy design, environmental engineering, and data modeling. I am passionate about how infrastructure can be made more climate-resilient through technical innovation and intelligent data use.</p>
+
+      <p>I hold a Bachelor's degree in Energy Engineering from the Politehnica University of Bucharest, where I graduated in the top 10% of my class. My dissertation — awarded a top 1% mark — was titled "Floating Photovoltaic Panels: Assessing the Potential, Advantages, and Challenges of Capturing Solar Energy on Water Surfaces," and was completed under the supervision of Professor Liana Ioana Vuta. It involved modeling solar irradiance for floating PV systems across Romanian reservoirs. During the final year of my undergraduate studies, I actively participated in two scientific communication conferences, where I presented technical research alongside peers. One of these presentations focused on the innovative concept of floating wind turbines — exploring their potential for offshore energy production, environmental integration, and co-location with floating solar systems. I am also pursuing a second Master’s in Hydroinformatics and Water Engineering.</p>
+
+      <p>Outside of academia, I’ve been a volunteer with the Red Cross and Greenpeace, and I enjoy traveling and winter sports, especially snowboarding. I closely follow the global commodities and financial markets and actively manage a long-term investment portfolio.</p>
     </div>
     <div class="profile-img">
       <img src="profile.jpg" alt="Aurelian-Andrei Panait">
