--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
 </head>
 <body>
   <h1>Aurelian-Andrei Panait</h1>
+  <div class="language-switcher" style="text-align:right; margin-bottom: 1rem;">
+    <a href="index.html">English</a> |
+    <a href="index-fr.html">Français</a>
+  </div>
 
   <div class="profile">
     <div class="profile-text">
