--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
   <div class="links">
     <a href="mailto:aurelian-andrei.panait@etu.minesparis.psl.eu">Email</a> /
-    <a href="Aurelian_Andrei_Panait_CV.pdf">CV (EN)</a> / <a href="Aurelian_Andrei_Panait_CV_FR.pdf">CV (FR)</a> /
+    <a href="Aurelian_Andrei_Panait_CV.pdf">CV</a> / 
     <a href="https://github.com/aurelianpanait">GitHub</a> /
     <a href="https://www.linkedin.com/in/panait-andrei-52b598100">LinkedIn</a>
   </div>
