--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@ I have completed internships in commodities and energy trading, focusing on mark
                         <td>
                             <div class="large-12 columns">
                                 <ul> 
-                                <li><b>[10/2023] </b> I have joined UCL as an Honorary Lecturer in Computer Science :)
+                                <li><b>[10/2023] </b> Under Work :)
                                 </li>
                                 </br> 
-                                <li><b>[10/2023] </b> I have joined UCL as an Honorary Lecturer in Computer Science :)
+                                <li><b>[10/2023] </b> Under Work :)
                                 </li>
                                 </br>
 
@@ -116,7 +116,7 @@ I have completed internships in commodities and energy trading, focusing on mark
                         </td>
                         <td>
                             <div class="large-12 columns", style="margin: 20px">
-                                <b> Tinmar Energy </b> - <i> Intern, Oil & Gas and Power </i> - (2024) </br> 
+                                <b> Tinmar Energy </b> - <i> Proprietary Trading Intern </i> - (2024) </br> 
                             </div>
                         </td>
                     </tr>
@@ -133,7 +133,7 @@ I have completed internships in commodities and energy trading, focusing on mark
                         </td>
                         <td>
                             <div class="large-12 columns", style="margin: 20px">
-                                <b> Tinmar Energy </b> - <i> Intern, Energy Market Analsyt </i> - (2023) </br> 
+                                <b> Tinmar Energy </b> - <i> Energy Trading Analyst Intern </i> - (2023) </br> 
                             </div>
                         </td>
                     </tr>
