--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                             <span style="display: inline-block; white-space: nowrap;">
                                 <a href="cv_panait_andrei.pdf" target="_blank" title="Download CV"><i class="fa fa-file-text"></i></a> 
                                 <span class="sep">|</span>
-                                <a href="https://github.com/andreip1996" title="GitHub Profile"><i class="fa fa-github"></i></a> 
+                                <a href="https://github.com/aurelianpanait" title="GitHub Profile"><i class="fa fa-github"></i></a> 
                                 <span class="sep">|</span>
                                 <a href="https://www.linkedin.com/in/panait-andrei-52b598100/" title="LinkedIn Profile"><i class="fa fa-linkedin-square"></i></a>
                             </span>
@@ -273,7 +273,7 @@ I have completed internships in commodities and energy trading, focusing on mark
         <div class="footer">
 	  <img  src="img/robot.png" alt="Robot" class="seal"></a>
             <a>aurelian-andrei.panait@etu.minesparis.psl.eu </a> <span class="sep">|</span>
-            <a href="https://github.com/andreip1996?tab=overview&from=2025-05-01&to=2025-05-06">GitHub</a> <span class="sep">|</span>
+            <a href="https://github.com/aurelianpanait?tab=overview&from=2025-05-01&to=2025-05-06">GitHub</a> <span class="sep">|</span>
             <a href="https://www.linkedin.com/in/panait-andrei-52b598100/">LinkedIn</a>
 	   <img src="img/robot.png" style="float: right" alt="NA" class="seal"></a>
        <p style="text-align:right; font-size:small; margin-top: 10px;">
